<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DataTransfer.DataTransferActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@color/colorGrey"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/send_data"
            android:textSize="20dp"/>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:max="100"
            android:visibility="invisible"
            android:id="@+id/sendDataProgressBar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sendDataField"
            android:background="@color/colorGreyDark"
            android:padding="10dp"
            android:orientation="horizontal"
            android:onClick="browseFileExplorer"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/sendDataImage"
                android:background="@drawable/file_image_grey"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:id="@+id/sendDataText"
                    android:textSize="15dp"
                    android:text="@string/no_file_selected"/>

            </RelativeLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#b8b8b8"
            android:id="@+id/sendDataButt"
            android:visibility="invisible"
            android:text="@string/send"
            android:onClick="sendData"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@color/colorGrey"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/receive_data"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/receiving_data"
            android:textStyle="bold"
            android:textAlignment="center"
            android:id="@+id/receiveDataTextReceive"
            android:visibility="invisible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGreyDark"
            android:padding="10dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/receiveDataField"
            android:onClick="browseFolderExplorer">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/receiveDataImage"
                android:background="@drawable/folder_image_grey"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/folder_not_selected"
                    android:id="@+id/receiveDataText"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/receiveDataButt"
            android:layout_marginTop="10dp"
            android:background="#b8b8b8"
            android:visibility="invisible"
            android:text="@string/listen"
            android:onClick="listenData"/>

    </LinearLayout>



</LinearLayout>